<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.App.DialogLayout">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/Widget.App.DialogTitle"
        android:text="@string/dialog_password_protection" />

    <TextView
        android:id="@+id/dialog_message"
        style="@style/Widget.App.DialogMessage"
        android:text="@string/dialog_password_protection_message" />

    <CheckBox
        android:id="@+id/use_password_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_m"
        android:text="@string/dialog_use_password"
        android:textColor="?attr/android:textColorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.App.TextField"
        android:hint="@string/dialog_master_password"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        style="@style/Widget.App.TextField"
        android:hint="@string/dialog_confirm_master_password"
        android:layout_marginBottom="0dp"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>