<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.App.DialogLayout">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/Widget.App.DialogTitle"
        android:text="@string/dialog_import_public_key_title" />

    <TextView
        android:id="@+id/dialog_message"
        style="@style/Widget.App.DialogMessage"
        android:text="@string/dialog_import_public_key_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/key_name_layout"
        style="@style/Widget.App.TextField"
        android:hint="@string/dialog_key_name_hint"
        android:layout_marginBottom="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>